tests/fixtures/semantics/invalid/switch_expr_mismatched_arm_types.ora
contract SemInvalidSwitchExprMismatchedArmTypes {
    pub fn demo() {
        let x: u256 = 1;
        // Invalid: arm result types differ (u256 vs string)
        let y = switch (x) {
            0 => 10,
            else => "nope",
        };
        _ = y;
    }
}


